--- a/01 - Deep  Learing and Natural Language.ipynb
+++ b/01 - Deep  Learing and Natural Language.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"resources\\deep learnig for nlp.PNG\" width='10%'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Deep Learning and Natural Language"
    ]
   },
@@ -28,13 +35,6 @@
     "\n",
     "</div>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
